# neohtop-cli

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  ghost_preview.go
.github/workflows/: release.yml
cli/: go.mod  main.go
cli/bridge/: bridge.go  bridge.h
cli/config/: config.go
cli/filter/: filter.go  sort.go  sort_test.go  tree_test.go
cli/model/: app.go  process.go  system.go
cli/monitor/: monitor.go  process_darwin.go  process_linux.go  process_windows.go  system_darwin.go  system_linux.go  system_windows.go  types.go
cli/theme/: catppuccin.go  theme.go
cli/types/: types.go
cli/view/: bar.go  column_panel.go  filter_panel.go  footer.go  format.go  help.go  icons.go  kill_confirm.go  layout.go  process_details.go  process_icons.go  process_table.go  sparkline.go  stats_bar.go  theme_panel.go  toolbar.go
core/: Cargo.toml
core/src/: ffi.rs  lib.rs  state.rs
core/src/monitoring/: mod.rs  process_monitor.rs  system_monitor.rs  types.rs
npm/: README.md  install.js
