[package]
name = "neohtop_core"
version = "0.1.0"
edition = "2021"
description = "System monitoring core library for NeoHtopCLI"

[lib]
name = "neohtop_core"
crate-type = ["staticlib"]

[dependencies]
sysinfo = { version = "0.35", features = ["disk", "multithread", "network", "system"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
incremental = false
